[gd_scene load_steps=6 format=3 uid="uid://bmsxwn66dxpwk"]

[ext_resource type="PackedScene" uid="uid://mly8bnrw75r0" path="res://scene/puzzles/camera_pov/camera_pov_base.tscn" id="1_0vp51"]
[ext_resource type="Script" path="res://scripts/puzzles/camera_pov/camera_monster/camera_monster_base.gd" id="2_gn7cg"]

[sub_resource type="Animation" id="Animation_3ek3e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0chix"]
resource_name = "photo_realized"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1e7e"]
_data = {
"RESET": SubResource("Animation_3ek3e"),
"photo_realized": SubResource("Animation_0chix")
}

[node name="Node2D" instance=ExtResource("1_0vp51")]
script = ExtResource("2_gn7cg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_h1e7e")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer" index="0"]
visible = false
offset_left = -2992.0
offset_top = -1455.0
offset_right = 4661.0
offset_bottom = 2601.0
color = Color(0.211765, 0.211765, 0.211765, 0.6)

[node name="Label" type="Label" parent="AnimationPlayer" index="1"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "PHOTO_REALIZED"

[connection signal="area_detected_light" from="Camera2D" to="." method="_on_camera_2d_area_detected_light"]
[connection signal="area_detected_photo" from="Camera2D" to="." method="_on_camera_2d_area_detected_photo"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
